# real-estate-scraper

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: scraper.yml
db/: engine.py  property.py
enums/: enums.py
messaging/: telegram_bot.py
model/: property.py
scrape/: scraper.py  util.py
settings/: application_settings.py
