[project]
name = "property-scraper-notifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.8.1",
    "pytelegrambotapi>=4.26.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "selenium>=4.29.0",
    "sqlalchemy>=2.0.39",
    "webdriver-manager>=4.0.2",
]
